# DZ_Go_IT

./: README.md
modul_01/: abstract.py  metaclass.py
modul_02/: class_notes.py  сlass_adressbook.py
modul_03/: Dockerfile
module_04/: main.py
module_05/: factorize.py
module_06/: main.py
module_07/: main_client.py  main_server.py
module_08/: education.sql  insert.py  samples_from_db.sql
module_09_dz/: config.ini  pyproject.toml
module_09_dz/database/: db.py  models.py  repository.py
module_09_dz/migrations/: env.py
module_09_dz/migrations/versions/: 78a8c89c1cfe_init.py  f1b35b7e7d53_init.py
module_09_dz/seed/: add_handlers.py  change_handlers.py  main.py  remove_handlers.py  show_handlers.py
module_10/: main.py  pyproject.toml
module_10/handlers/: add_handlers.py  change_handlers.py  remove_handlers.py  show_handlers.py
module_10/mongoengine_example/: models.py  records.py
module_10/redis_example/: redis_cache.py
