[tool.poetry]
name = "module-10"
version = "0.1.0"
description = ""
authors = ["Andrii Truba <truba.a@icloud.com>"]
readme = "README.md"
packages = [{include = "module_10"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.25.0"
redis = "^4.4.0"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
